Working on header

--- a/sass/base/variables.scss
+++ b/sass/base/variables.scss
@@ -1,4 +1,17 @@
-$screen-xs:                  480px;
-$screen-sm:                  768px;
-$screen-md:                  992px;
-$screen-lg:                  1200px;
+$screen-xs: 480px;
+$screen-sm: 768px;
+$screen-md: 992px;
+$screen-lg: 1200px;
+
+//Colors
+
+$main-color: #2c3e50;
+$fray-color: #a0a4a9;
+
+$light-bg-color: #535a6c;
+$dark-bg-color: #353c4f;
+
+$white: #FFFFFF;
+$black: #000000;
+$pink : #f1948a;
+$red : #e74c3c;
