--- a/sass/base/fonts.scss
+++ b/sass/base/fonts.scss
@@ -1,6 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,500,700,800);
 
-@mixin main-font($font-weight) {
+@mixin main-font() {
     font-family: 'Raleway', sans-serif;
-    font-weight: $font-weight;
 }
