--- a/sass/base/settings.scss
+++ b/sass/base/settings.scss
@@ -1,39 +1,41 @@
 html, body {
-  height: 100%;
-  min-height: 100%;
+    height: 100%;
+    min-height: 100%;
+    @include main-font;
+    color: $white;
 }
 
 .container {
-  width: 95%;
-  margin: 0 auto;
-  position: relative;
+    width: 90%;
+    margin: 0 auto;
+    position: relative;
 
-  @media (min-width : $screen-xs) {
-    width: 95%;
+    @media (min-width: $screen-xs) {
+        width: 480px;
 
-  }
-  @media (min-width: $screen-sm) {
-    width: 768px;
+    }
+    @media (min-width: $screen-sm) {
+        width: 768px;
 
-  }
-  @media (min-width: $screen-md) {
-    width: 992px;
+    }
+    @media (min-width: $screen-md) {
+        width: 992px;
 
-  }
+    }
 
-  @media (min-width: $screen-lg) {
-    width: 1180px;
+    @media (min-width: $screen-lg) {
+        width: 1180px;
 
-  }
+    }
 
 }
 
 .clearfix:before,
 .clearfix:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
+    content: " "; /* 1 */
+    display: table; /* 2 */
 }
 
 .clearfix:after {
-  clear: both;
+    clear: both;
 }
