--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import 'base/variables';
-@import 'base/settings';
 @import 'base/fonts';
+@import 'base/settings';
 @import 'base/mixins';
 
 
@@ -15,6 +15,8 @@
 @import 'pages/home/skills';
 @import 'pages/home/works';
 
+
+@import "components/nav";
 
 
 
