Working on about section

--- a/sass/base/settings.scss
+++ b/sass/base/settings.scss
@@ -30,6 +30,38 @@ html, body {
 
 }
 
+.main-heading {
+    @include main-font;
+    font-weight: 800;
+    color: $main-color;
+    text-align: center;
+    font-size: 32px;
+    line-height: 48px;
+    letter-spacing: 0.1em;
+    padding-bottom: 20px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    position: relative;
+    text-transform: uppercase;
+
+
+
+    @media (min-width: $screen-md) {
+        font-size: 60px;
+    }
+
+    &:after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        margin-left: -30px;
+        width: 60px;
+        height: 2px;
+        background: $main-color;
+    }
+}
+
 .clearfix:before,
 .clearfix:after {
     content: " "; /* 1 */
