--- a/sass/base/variables.scss
+++ b/sass/base/variables.scss
@@ -8,6 +8,9 @@ $screen-lg: 1200px;
 $main-color: #2c3e50;
 $fray-color: #a0a4a9;
 
+$secender-font-color : #7e878f;
+
+
 $light-bg-color: #535a6c;
 $dark-bg-color: #353c4f;
 
