--- a/sass/base/fonts.scss
+++ b/sass/base/fonts.scss
@@ -1,5 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,500,700,800);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:300,400,500,600,800);
 
 @mixin main-font() {
     font-family: 'Raleway', sans-serif;
+}
+
+@mixin secendery-font() {
+    font-family: 'Open Sans', sans-serif;
 }
