--- a/sass/base/fonts.scss
+++ b/sass/base/fonts.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:300,400,500,600,800);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800|Arizonia|Raleway:300,400,500,600,800);
 
 @mixin main-font() {
     font-family: 'Raleway', sans-serif;
@@ -6,4 +6,8 @@
 
 @mixin secendery-font() {
     font-family: 'Open Sans', sans-serif;
+}
+
+@mixin arizonia-font() {
+    font-family: 'Arizonia', cursive;
 }
