--- a/sass/base/settings.scss
+++ b/sass/base/settings.scss
@@ -48,6 +48,9 @@ html, body {
 
     @media (min-width: $screen-md) {
         font-size: 60px;
+        margin-top: 150px;
+        padding-bottom: 40px;
+        margin-bottom: 60px;
     }
 
     &:after {
