--- a/sass/pages/home/about.scss
+++ b/sass/pages/home/about.scss
@@ -1,5 +1,14 @@
 .about-me {
 
+    .flex-container {
+        @media (min-width: $screen-md) {
+            display: flex;
+            justify-content: flex-start;
+            margin-top: 30px;
+
+        }
+    }
+
     &__text {
         @include main-font;
         font-weight: 400;
@@ -17,8 +26,126 @@
 
     &__text-lead {
         font-weight: 600;
+
+        @media (min-width: $screen-md) {
+            margin-bottom: 30px;
+
+        }
     }
 
+
+    &__photo {
+        width: 250px;
+        height: 250px;
+        /*border-radius: 100%;
+        border: 20px solid $main-color;*/
+        text-align: center;
+
+        @media (min-width: $screen-md) {
+            width: 340px;
+            height: 330px;
+            margin-top: 25px;
+        }
+
+
+    }
+
+    &__details {
+        @media (min-width: $screen-md) {
+            margin-top: 20px;
+            margin-left: 58px;
+            min-width: 320px;
+        }
+    }
+
+    &__detail-info {
+
+    }
+
+    &__info-item {
+        font-size: 16px;
+        color: $secender-font-color;
+        margin-bottom: 15px;
+    }
+
+    &__info-heading {
+        font-weight: bold;
+        float: left;
+        width: 90px;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    &__info-text {
+        font-weight: 400;
+        float: left;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    &__signature {
+        @include arizonia-font;
+        color: $main-color;
+        font-size: 30px;
+        line-height: 32px;
+        text-align: center;
+
+        @media (min-width: $screen-md) {
+            text-align: left;
+            margin-bottom: 50px;
+        }
+    }
+
+    &__hobbies {
+        @media (min-width: $screen-md) {
+            min-width: 375px;
+            margin-left: 40px;
+        }
+    }
+
+    &__hobbies-heading {
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 28px;
+        color: $main-color;
+        text-transform: uppercase;
+        text-align: center;
+
+        @media (min-width: $screen-md) {
+            margin-top: 17px;
+            margin-bottom: 30px;
+            text-align: left;
+        }
+    }
+
+    &__hobby-item {
+        width: 90px;
+        height: 90px;
+        float: left;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        background: #f1f1f1;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+
+    &__hobby-icon {
+        font-size: 33px;
+        color: $secender-font-color;
+    }
+
+    &__hobby-title {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 27px;
+        color: $secender-font-color;
+        text-align: center;
+    }
 
 
 }
