--- a/sass/components/btn.scss
+++ b/sass/components/btn.scss
@@ -14,7 +14,7 @@
     text-transform: uppercase;
     color: $white;
     text-decoration: none;
-    transition: color .3s ease-in-out;
+    transition: background .3s ease-in-out;
 
     @media (min-width: $screen-md) {
         margin: 0;
