--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -7,6 +7,8 @@
     background: #262930;
     transition: left .3s ease-in-out;
     z-index: 3;
+    -webkit-box-shadow: 0 3px 20px 0 #e7e7e7;
+    box-shadow: 0 3px 20px 0 #e7e7e7;
 
     @media (min-width: $screen-md) {
         position: static;
