--- a/sass/pages/home/about.scss
+++ b/sass/pages/home/about.scss
@@ -1,4 +1,5 @@
 .about-me {
+    padding-bottom: 100px;
 
     .flex-container {
         display: flex;
@@ -10,6 +11,7 @@
             flex-direction: row;
             justify-content: flex-start;
             margin-top: 30px;
+            align-items: flex-start;
 
         }
     }
@@ -60,6 +62,11 @@
         @media (min-width: $screen-md) {
             margin-top: 20px;
             margin-left: 58px;
+            min-width: 270px;
+
+        }
+
+        @media (min-width: $screen-lg) {
             min-width: 320px;
         }
     }
@@ -117,6 +124,11 @@
 
     &__hobbies {
         @media (min-width: $screen-md) {
+            min-width: 305px;
+            margin-left: 20px;
+        }
+
+        @media (min-width: $screen-lg) {
             min-width: 375px;
             margin-left: 40px;
         }
@@ -160,7 +172,8 @@
             margin-bottom: 15px;
         }
 
-        @media (min-width: $screen-sm) {
+
+        @media (min-width: $screen-lg) {
             width: 25%;
         }
     }
