--- a/sass/pages/home/works.scss
+++ b/sass/pages/home/works.scss
@@ -1,37 +1,29 @@
 .works {
     background: $main-color;
     &__items {
-        padding-bottom: 50px;
+        padding-bottom: 150px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
     }
 
     &__item {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+
         transition: all .3s ease-in-out;
         position: relative;
-        background: $red;
         border-radius: 5px;
         box-sizing: border-box;
-        height: 270px;
+        width: 560px;
+        height: 100%;
         margin-bottom: 50px;
 
-        @media (min-width: $screen-sm) {
-            width: calc(50% - 50px);
-            float: left;
-            margin-right: 50px;
 
-
-        }
 
         @media (min-width: $screen-md) {
-            width: 270px;
-            margin-right: 30px;
+            height: 301px;
+            float: left;
+            margin-right: 20px;
+            margin-bottom: 20px;
 
 
         }
@@ -53,36 +45,46 @@
                 margin-right: 0;
             }
             @media (min-width: $screen-md) {
-                margin-right: 30px;
+                margin-right: 20px;
             }
         }
 
-        &--padding {
-            padding: 0 25px;
 
-        }
-
-        &--padding-big {
-
-            padding: 50px 50px;
-
-            @media (min-width: $screen-sm) {
-                padding: 0 50px;
-            }
-
-        }
-
-        &--padding-very-big {
-            padding: 75px 75px;
-
-            @media (min-width: $screen-sm) {
-                padding: 0 75px;
-
-            }
-
-        }
 
         &:hover {
+            .apla-hover {
+                opacity: 1;
+            }
+        }
+        &:hover:before {
+            height: 50%
+        }
+
+        &:hover:after {
+            height: 50%
+        }
+
+        &:after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 0;
+            background: rgba(0,0,0,.5);
+            transition: height .3s ease-in-out;
+        }
+
+        &:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 0;
+            background: rgba(0,0,0,.5);
+            transition: height .3s ease-in-out;
+
 
         }
     }
@@ -92,4 +94,32 @@
     }
 
 
+}
+
+.apla-hover {
+    opacity:0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    transition: opacity .3s ease-in-out;
+    z-index: 99;
+
+    &__icone {
+        margin-bottom: 20px;
+        width: 40px;
+        height: 40px;
+    }
+
+    &__project-name {
+        color: #FFFFFF;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 25px;
+    }
 }
