--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background: #262930;
-    transition: left .3s ease-in-out;
+    transition: all .3s ease-in-out;
     z-index: 3;
 
 
@@ -13,15 +13,53 @@
         position: static;
         height: 90px;
         background: $white;
-        -webkit-box-shadow: 0 3px 20px 0 #e7e7e7;
-        box-shadow: 0 3px 20px 0 #e7e7e7;
+        -webkit-box-shadow: 0 3px 20px 0 $main-color;
+        box-shadow: 0 3px 20px 0 $main-color;
 
 
+    }
+
+    &.sticky {
+        position: fixed;
+        top:0;
+        left: 0;
     }
 
     &.open {
         left: 0;
 
+    }
+
+    &__close-btn {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top:20px;
+        right: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 99999;
+
+        @media (min-width: $screen-md) {
+            display: none;
+        }
+    }
+
+    &__close-span {
+        display: block;
+        width: 100%;
+        height: 2px;
+        background: #FFFFFF;
+
+        &:first-child {
+            transform: rotate(45deg);
+        }
+
+        &:last-child {
+            transform: rotate(-45deg);
+        }
     }
 
     &__flex-container {
@@ -68,7 +106,9 @@
         }
 
         &--last {
-            margin-right: 0;
+            @media (min-width: $screen-md) {
+                margin-right: 0;
+            }
         }
     }
 
