--- a/sass/pages/home/contact.scss
+++ b/sass/pages/home/contact.scss
@@ -1,15 +1,38 @@
 .contact {
+    margin-bottom: 130px;
+
     .data {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        margin-bottom: 60px;
+
+        @media (min-width: $screen-xs) {
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+
 
         &__item {
             display: flex;
-            justify-content: space-between;
+            flex-direction: row;
+            justify-content: space-around;
+            text-decoration: none;
+
+            &:hover,
+            &:active,
+            &:focus {
+                color: $main-color;
+            }
+
+
 
             &--first {
-                margin-right: 230px;
+                margin-bottom: 50px;
+               @media (min-width: $screen-xs) {
+                   margin-bottom: 0;
+               }
             }
         }
 
@@ -40,7 +63,7 @@
         }
 
         &__text {
-
+            width: 200px;
         }
 
         &__heading {
@@ -58,6 +81,116 @@
             font-weight: 400;
             color: $secender-font-color;
             margin-top: 0;
+
+        }
+    }
+
+    .form {
+        &__group {
+            @media (min-width: $screen-sm) {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-bottom: 20px;
+            }
+        }
+
+        &__input {
+            width: 100%;
+            box-sizing: border-box;
+            height: 50px;
+            border: 1px solid transparent;
+            background: #f2f2f2;
+            transition: border .3s ease-in-out;
+
+            color: $secender-font-color;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 50px;
+
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-bottom: 20px;
+
+
+            &::-webkit-input-placeholder {
+                color: $secender-font-color;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 50px;
+            }
+            &::-moz-placeholder {
+                color: $secender-font-color;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 50px;
+            }
+            &:-ms-input-placeholder {
+                color: $secender-font-color;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 50px;
+            }
+            &:-moz-placeholder {
+                color: $secender-font-color;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 50px;
+            }
+
+
+            @media (min-width: $screen-sm) {
+                margin-bottom: 0;
+            }
+
+            &--float {
+                width: 100%;
+
+                @media (min-width: $screen-sm) {
+                    width: calc(50% - 5px);
+
+                }
+            }
+            &--first {
+                @media (min-width: $screen-sm) {
+
+                }
+            }
+
+            &--textarea {
+                height: auto;
+                margin-bottom: 45px;
+
+            }
+
+
+            &.invalid {
+                border: 1px solid $red;
+            }
+        }
+
+        &__submit {
+            width: 100%;
+            height: 50px;
+            background: $red;
+            border: 0;
+            border-radius: 5px;
+
+            @include secendery-font;
+            font-weight: 800;
+            line-height: 50px;
+            color: #FFFFFF;
+            text-align: center;
+
+
+
+
+        }
+
+        &__submit-icon {
+            color: #FFFFFF;
+            font-size: 20px;
+            margin-right: 10px;
 
         }
     }
