--- a/sass/pages/home/quote.scss
+++ b/sass/pages/home/quote.scss
@@ -6,7 +6,7 @@
 
     text-align: center;
     width: 100%;
-    height: 480px;
+    height: 580px;
     position: relative;
     text-transform: uppercase;
 
@@ -14,6 +14,10 @@
     justify-content: center;
     align-items: center;
     z-index: 2;
+
+    @media (min-width: $screen-md) {
+        height: 480px;
+    }
 
 
 
