--- a/sass/pages/home/works.scss
+++ b/sass/pages/home/works.scss
@@ -1,10 +1,15 @@
 .works {
     background: $main-color;
     &__items {
-        padding-bottom: 150px;
+
+        padding-bottom: 50px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+
+        @media (min-width: $screen-md) {
+            padding-bottom: 100px;
+        }
     }
 
     &__item {
