--- a/sass/pages/home/works.scss
+++ b/sass/pages/home/works.scss
@@ -115,6 +115,10 @@
     transition: opacity .3s ease-in-out;
     z-index: 99;
 
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+
     &__icone {
         margin-bottom: 20px;
         width: 40px;
@@ -126,5 +130,12 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 25px;
+
+        &--text {
+            margin-top: 0;
+            margin-bottom: 0;
+            font-size: 15px;
+            line-height: 22px;
+        }
     }
 }
