--- a/sass/pages/home/works.scss
+++ b/sass/pages/home/works.scss
@@ -132,10 +132,14 @@
         line-height: 25px;
 
         &--text {
-            margin-top: 0;
-            margin-bottom: 0;
-            font-size: 15px;
-            line-height: 22px;
+            display: none;
+
+            @media (min-width: $screen-md) {
+                margin-top: 0;
+                margin-bottom: 0;
+                font-size: 15px;
+                line-height: 22px;
+            }
         }
     }
 }
