--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -85,7 +85,7 @@
 
         @media (min-width: $screen-md) {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
         }
     }
 
@@ -134,8 +134,11 @@
             outline: none;
             text-decoration: none;
             color: $red;
+        }
 
 
+        &.select {
+            color: $red;
         }
     }
 }
