--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -7,23 +7,9 @@
     position: relative;
     text-align: center;
 
-    background: url('../img/header-b.jpg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    z-index: 2;
+    background: url('../img/header-b.png') repeat;
 
-    &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url('../img/gridtile.png') repeat;
-        background-attachment: fixed;
-        z-index: -1;
-    }
+
 
 
 
