--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -41,6 +41,7 @@
         justify-content: center;
         align-items: center;
         z-index: 99999;
+        cursor: pointer;
 
         @media (min-width: $screen-md) {
             display: none;
