--- a/sass/pages/home/works.scss
+++ b/sass/pages/home/works.scss
@@ -21,21 +21,27 @@
         height: 100%;
         margin-bottom: 50px;
 
-
-
         @media (min-width: $screen-md) {
             height: 301px;
             float: left;
             margin-right: 20px;
             margin-bottom: 20px;
-
+            width: 100%;
 
         }
 
         &--onwelo {
+            display: block;
             background: url(../img/works/onwelo.jpg);
             background-size: cover;
             background-position: center;
+
+            width: 100%;
+            height: 185px;
+
+            @media (min-width: $screen-md) {
+                height: 301px;
+            }
         }
 
         &--no-margin {
@@ -59,8 +65,6 @@
             }
         }
 
-
-
         &:hover {
             .apla-hover {
                 opacity: 1;
@@ -81,7 +85,7 @@
             left: 0;
             width: 100%;
             height: 0;
-            background: rgba(0,0,0,.5);
+            background: rgba(0, 0, 0, .5);
             transition: height .3s ease-in-out;
         }
 
@@ -92,28 +96,61 @@
             left: 0;
             width: 100%;
             height: 0;
-            background: rgba(0,0,0,.5);
+            background: rgba(0, 0, 0, .5);
             transition: height .3s ease-in-out;
 
-
         }
+    }
+
+    &__item-container {
+        margin-bottom: 20px;
+
+        @media (min-width: $screen-md) {
+            width: 50%;
+            float: left;
+        }
+
     }
 
     &__image {
         max-width: 100%;
     }
 
+    &__name {
+        @include main-font;
+        font-weight: 800;
+        color: #2c3e50;
+        text-align: center;
+    }
+
+    &__description {
+        @include main-font;
+        font-weight: 600;
+        color: #2c3e50;
+        text-align: justify;
+        margin-bottom: 40px;
+
+        @media (min-width: $screen-md) {
+            min-height: 120px;
+            padding: 0px 20px;
+        }
+
+        @media (min-width: $screen-lg) {
+            min-height: 100px;
+
+        }
+    }
 
 }
 
 .apla-hover {
-    opacity:0;
+    opacity: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
