--- a/app/sass/base/fonts.scss
+++ b/app/sass/base/fonts.scss
@@ -1,5 +1,4 @@
-//@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800|Arizonia|Raleway:300,400,500,600,800);
-//@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800|Arizonia|Raleway:300,400,500,600,800);
 
 @mixin main-font() {
   font-family: 'Raleway', sans-serif;
