--- a/app/sass/pages/home/works.scss
+++ b/app/sass/pages/home/works.scss
@@ -63,10 +63,15 @@
         }
     }
 
+    &__item-content {
+        opacity: 0;
+    }
+
 
 
     &__image {
         max-width: 100%;
+        opacity: 0;
 
         @media (min-width: $screen-md) {
             margin-right: 20px;
