--- a/app/sass/partials/_header.scss
+++ b/app/sass/partials/_header.scss
@@ -18,11 +18,13 @@
         font-size: 38px;
         font-weight: 800;
         margin-bottom: 10px;
+        opacity: 0;
 
         @media (min-width: $screen-md) {
             font-size: 90px;
             line-height: 75px;
             margin-bottom: 35px;
+
         }
     }
 
@@ -31,6 +33,7 @@
         font-size: 17px;
         font-weight: bold;
         margin-top: 0;
+        opacity: 0;
 
         @media (min-width: $screen-md) {
             font-size: 32px;
@@ -47,6 +50,7 @@
     &__social-item {
         display: inline-block;
         margin-right: 10px;
+        opacity: 0;
         @media (min-width: $screen-md) {
             margin-right: 2px;
         }
