Change realization section

--- a/app/sass/base/settings.scss
+++ b/app/sass/base/settings.scss
@@ -1,8 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     min-height: 100vh;
     @include main-font;
     color: $white;
-    box-sizing: border-box;
 }
 
 .container {
