--- a/app/sass/pages/home/works.scss
+++ b/app/sass/pages/home/works.scss
@@ -1,146 +1,146 @@
 .works {
-    &__items {
-        padding-bottom: 50px;
+
+}
+
+.works__items {
+    padding-bottom: 50px;
+
+    @media (min-width: $screen-md) {
+        padding-bottom: 100px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        @media (min-width: $screen-md) {
-            padding-bottom: 100px;
-        }
+        justify-content: space-between;
     }
-    &__item {
-        transition: all .3s ease-in-out;
-        position: relative;
-        border-radius: 5px;
-        box-sizing: border-box;
-        width: 560px;
-        height: 100%;
+}
+
+
+
+.work {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+
+    @media (min-width: $screen-md) {
+        height: 430px;
+        width: calc(50% - 30px);
         margin-bottom: 50px;
-        @media (min-width: $screen-md) {
-            height: 301px;
-            float: left;
-            margin-right: 20px;
-            margin-bottom: 20px;
-            width: 100%;
-        }
-        &--no-margin {
-            @media (min-width: $screen-lg) {
-                margin-right: 0;
-            }
-        }
-        &--secend {
-            &.works__item--no-margin {
-                @media (min-width: $screen-lg) {
-                    margin-right: 0;
-                }
-            }
-            @media (min-width: $screen-xs) {
-                margin-right: 0;
-            }
-            @media (min-width: $screen-md) {
-                margin-right: 20px;
-            }
-        }
+        overflow: hidden;
     }
-    &__item-container {
-        margin-bottom: 20px;
-        @media (min-width: $screen-md) {
-            display: flex;
-            margin-bottom: 50px;
-        }
-        &.reverse {
-            @media (min-width: $screen-md) {
-                .works__item-content {
-                    text-align: right;
-                    order: 1;
-                }
-                .works__image {
-                    order: 2;
-                    margin-right: 0;
-                    margin-left: 20px;
-                }
-                .works__subheading {
-                    margin-left: auto;
-                }
 
-                .works__link {
-                    margin-left: auto;
-                }
+    &:hover {
+        .work__content {
+            opacity: 1;
+        }
+    }
+}
 
-                .works__name {
-                    margin-left: auto;
-                }
-            }
-        }
-    }
-    &__item-content {
-        @media (min-width: $screen-md) {
-            width: 50%;
-            height: 420px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-        }
-    }
-    &__image {
-        max-width: 100%;
-        @media (min-width: $screen-md) {
-            margin-right: 20px;
-            height: 420px;
-            width: calc(50% - 20px);
-        }
-    }
-    &__name {
-        display: inline-block;
-        @include main-font;
-        font-weight: 800;
-        color: $main-color;
-        @media (min-width: $screen-md) {
-            margin-top: 0;
-        }
-    }
-    &__subheading {
-        display: inline-block;
-        @include main-font;
-        font-weight: 600;
-        color: $main-color;
-        margin-bottom: 0;
-        padding-bottom: 3px;
-        border-bottom: 1px solid $red;
-        display: inline-block;
-    }
-    &__tech-list {
+.work__content {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: $main-color;
+
+    @media (min-width: $screen-md) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
         width: 100%;
-        @include main-font;
-        font-weight: 600;
-        color: $main-color;
-        margin-bottom: 0;
-        margin-top: 5px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        background: rgba(0,0,0,.8);
+        border-radius: 5px;
+        transition:  opacity .3s ease-in;
     }
-    &__link {
-        @include main-font;
-        font-weight: 600;
-        color: $main-color;
-        text-decoration: none;
-        display: block;
-        margin-top: 5px;
-        &:hover,
-        &:focus {
-            color: $main-color;
-            text-decoration: none;
-            outline: none;
-        }
+}
+
+.work__image {
+    display: block;
+    height: auto;
+    width: 100%;
+}
+
+.work__name {
+    display: inline-block;
+    @include main-font;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: $pink;
+
+    @media (min-width: $screen-md) {
+        margin-top: 0;
+        margin-bottom: 20px;
+        font-size: 26px;
     }
-    &__description {
+}
+
+
+.work__tech-list {
+    width: 100%;
+    padding: 0 50px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    @include main-font;
+    list-style: none;
+
+    @media (min-width: $screen-md) {
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    li {
+        position: relative;
+        display: inline-block;
+        padding-left: 20px;
+        margin-bottom: 5px;
         @include main-font;
-        font-weight: 600;
-        color: $main-color;
-        text-align: justify;
-        margin-bottom: 40px;
+        font-size: 14px;
+        text-align: center;
+
         @media (min-width: $screen-md) {
-            padding: 0;
-            margin-bottom: 0;
+            width: 33.3333%;
+            text-align: left;
         }
+
+        &:after {
+            content: none;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            margin-top: -2px;
+            width: 4px;
+            height: 4px;
+            background: $main-color;
+            border-radius: 50%;
+
+            @media (min-width: $screen-md) {
+                content: "";
+                background: #fff;
+            }
+        }
+    }
+}
+
+.work__subheading {
+    margin-top: 0;
+    @include main-font;
+    font-weight: 600;
+}
+
+.work__description {
+    @include main-font;
+    font-weight: 600;
+    color: $main-color;
+    text-align: justify;
+    margin-bottom: 40px;
+
+    @media (min-width: $screen-md) {
+        padding: 0;
+        margin-bottom: 0;
     }
 }
